# libpsl

./: configure.ac  meson.build  meson_options.txt
include/: libpsl.h.in  meson.build
src/: meson.build  psl.c
